<resources>
    <string name="app_name">UserInfoApp</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="select_gender">Select gender</string>
    <string name="save">Save</string>
    <string name="show_details">Show details</string>

    <string name="name">Name: </string>
    <string name="age">Age: </string>
    <string name="job_title">Job Title: </string>
    <string name="gender">Gender: </string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string-array name="gender_array">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>

</resources>